@@ -19,6 +19,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,7 +28,7 @@ import java.util.Map;
 public class WeaviateImp {
 
     // Constants to avoid duplicated literals
-    private static final String TEXT2VEC_MODULE = "text2vec-huggingface";
+    private static final String TEXT2VEC_MODULE = "text2vec-palm";
     private static final String VECTORIZE_PROPERTY_NAME = "vectorizePropertyName";
 
     WeaviateClient weaviateClient;
@@ -35,36 +36,39 @@ public class WeaviateImp {
 
     // Thêm job posting vào weaviate để cho job posting recommendation
     public void addJobPostingToWeaviate(JobPosting savedPostgres) {
-        // Chuyển List<String> skills sang định dạng String[] (handle empty/null case)
+        // Re-fetch with jobDescriptions + jdSkill eagerly to avoid lazy loading issues
+        JobPosting source = jobPostingRepo.fetchByIdWithSkills(savedPostgres.getId())
+                .orElse(savedPostgres);
+
         List<String> skills;
         try {
-            if (savedPostgres.getJobDescriptions() != null && !savedPostgres.getJobDescriptions().isEmpty()) {
-                skills = savedPostgres.getJobDescriptions().stream()
+            if (source.getJobDescriptions() != null && !source.getJobDescriptions().isEmpty()) {
+                skills = source.getJobDescriptions().stream()
+                        .filter(jd -> jd.getJdSkill() != null)
                         .map(jd -> jd.getJdSkill().getName())
-                        .toList();
+                        .distinct()
+                        .collect(Collectors.toList());
             } else {
-                skills = List.of(); // Empty list if no descriptions
+                skills = List.of();
             }
         } catch (Exception e) {
-            // Handle lazy loading exception or any other error
-            log.warn("Could not load job descriptions for job '{}', using empty skills list",
-                    savedPostgres.getTitle());
+            log.warn("Could not load job descriptions for job '{}', using empty skills list", source.getTitle());
             skills = List.of();
         }
 
-        // Tạo job posting map để thêm vào weaviate
         Map<String,Object> jobPostingMap = new HashMap<>();
-        jobPostingMap.put("jobId", savedPostgres.getId());
-        jobPostingMap.put("title", savedPostgres.getTitle());
-        jobPostingMap.put("description", savedPostgres.getDescription());
+        jobPostingMap.put("jobId", source.getId());
+        jobPostingMap.put("title", source.getTitle());
+        jobPostingMap.put("description", source.getDescription());
         jobPostingMap.put("skills", skills);
-        jobPostingMap.put("address", savedPostgres.getAddress());
+        jobPostingMap.put("address", source.getAddress());
 
-        // run creator and ignore returned result (we don't need it here)
         weaviateClient.data().creator()
                 .withClassName("JobPosting")
                 .withProperties(jobPostingMap)
                 .run();
+
+        log.info("Indexed job posting '{}' (id={}) to Weaviate with {} skills", source.getTitle(), source.getId(), skills.size());
     }
 
     // Kiểm tra xem job posting đã tồn tại trong Weaviate chưa
@@ -104,53 +108,45 @@ public class WeaviateImp {
     @PreAuthorize("hasRole('ADMIN')")
     public void resetJobPostingCollection() {
         String collectionName = "JobPosting";
-
         try {
-            // Delete existing collection
             Result<Boolean> deleteResult = weaviateClient.schema().classDeleter()
                     .withClassName(collectionName)
                     .run();
-
             if (deleteResult.hasErrors()) {
                 log.warn("Could not delete existing collection: {}", deleteResult.getError().getMessages());
             }
             deleteJobPostingInPostgres();
-
             Thread.sleep(2000);
-
-            // Create new collection
             createJobPostingCollection(collectionName);
             createJobPostingProperty(collectionName);
         } catch (InterruptedException ie) {
             Thread.currentThread().interrupt();
             throw new AppException(ErrorCode.UNCATEGORIZED_EXCEPTION);
         } catch (Exception e) {
-            log.error("Error resetting Roadmap collection: {}", e.getMessage(), e);
+            log.error("Error resetting Job Posting collection: {}", e.getMessage(), e);
             throw new AppException(ErrorCode.UNCATEGORIZED_EXCEPTION);
         }
     }
 
     private void createJobPostingCollection(String collectionName) {
         Map<String, Object> moduleConfig = new HashMap<>();
-        Map<String, Object> text2vecHuggingface = new HashMap<>();
-        text2vecHuggingface.put("vectorizeClassName", false);
-        text2vecHuggingface.put("model", "sentence-transformers/all-MiniLM-L6-v2");
-        moduleConfig.put(TEXT2VEC_MODULE, text2vecHuggingface);
-
+        Map<String, Object> text2vecGoogleAistudio = new HashMap<>();
+        text2vecGoogleAistudio.put("vectorizeClassName", false);
+        text2vecGoogleAistudio.put("model", "gemini-embedding-001");
+        moduleConfig.put(TEXT2VEC_MODULE, text2vecGoogleAistudio);
         WeaviateClass weaviateClass =
-                io.weaviate.client.v1.schema.model.WeaviateClass.builder()
+                WeaviateClass.builder()
                         .className(collectionName)
                         .description("A collection of job posting.")
                         .vectorizer(TEXT2VEC_MODULE)
                         .moduleConfig(moduleConfig)
                         .build();
-
         Result<Boolean> result = weaviateClient.schema().classCreator()
                 .withClass(weaviateClass)
                 .run();
-
         if (result.hasErrors()) {
-            throw new AppException(ErrorCode.UNCATEGORIZED_EXCEPTION);
+            log.error("Error creating Job Posting collection: {}", result.getError().getMessages());
+            throw new AppException(ErrorCode.CANNOT_CREATE_JOB_POSTING_COLLECTION);
         }
     }
 
@@ -161,14 +157,12 @@ public class WeaviateImp {
                 .dataType(Collections.singletonList("int"))
                 .description("The id of the job posting")
                 .build();
-
         Result<Boolean> r1 = weaviateClient.schema().propertyCreator()
                 .withClassName(collectionName)
                 .withProperty(jobIdProp)
                 .run();
-
         if (r1.hasErrors()) {
-            throw new AppException(ErrorCode.CANNOT_CREATE_ROADMAP_PROPERTY);
+            throw new AppException(ErrorCode.CANNOT_CREATE_JOB_POSTING_PROPERTY);
         }
 
         // title: text
@@ -177,21 +171,18 @@ public class WeaviateImp {
         titleInner.put("skip", false);
         titleInner.put(VECTORIZE_PROPERTY_NAME, false);
         titleModuleConfig.put(TEXT2VEC_MODULE, titleInner);
-
         Property titleProp = Property.builder()
                 .name("title")
                 .dataType(Collections.singletonList("text"))
                 .description("The title of the job posting")
                 .moduleConfig(titleModuleConfig)
                 .build();
-
         Result<Boolean> r2 = weaviateClient.schema().propertyCreator()
                 .withClassName(collectionName)
                 .withProperty(titleProp)
                 .run();
-
         if (r2.hasErrors()) {
-            throw new AppException(ErrorCode.CANNOT_CREATE_ROADMAP_PROPERTY);
+            throw new AppException(ErrorCode.CANNOT_CREATE_JOB_POSTING_PROPERTY);
         }
 
         // description: text
@@ -200,21 +191,18 @@ public class WeaviateImp {
         descInner.put("skip", false);
         descInner.put(VECTORIZE_PROPERTY_NAME, false);
         descModuleConfig.put(TEXT2VEC_MODULE, descInner);
-
         Property descProp = Property.builder()
                 .name("description")
                 .dataType(Collections.singletonList("text"))
                 .description("The description of the job posting")
                 .moduleConfig(descModuleConfig)
                 .build();
-
         Result<Boolean> r3 = weaviateClient.schema().propertyCreator()
                 .withClassName(collectionName)
                 .withProperty(descProp)
                 .run();
-
         if (r3.hasErrors()) {
-            throw new AppException(ErrorCode.CANNOT_CREATE_ROADMAP_PROPERTY);
+            throw new AppException(ErrorCode.CANNOT_CREATE_JOB_POSTING_PROPERTY);
         }
 
         // skills: text[]
@@ -223,21 +211,18 @@ public class WeaviateImp {
         skillsInner.put("skip", false);
         skillsInner.put(VECTORIZE_PROPERTY_NAME, false);
         skillsModuleConfig.put(TEXT2VEC_MODULE, skillsInner);
-
         Property skillsProp = Property.builder()
                 .name("skills")
                 .dataType(Collections.singletonList("text[]"))
                 .description("List of skills for the job posting")
                 .moduleConfig(skillsModuleConfig)
                 .build();
-
         Result<Boolean> r4 = weaviateClient.schema().propertyCreator()
                 .withClassName(collectionName)
                 .withProperty(skillsProp)
                 .run();
-
         if (r4.hasErrors()) {
-            throw new AppException(ErrorCode.CANNOT_CREATE_ROADMAP_PROPERTY);
+            throw new AppException(ErrorCode.CANNOT_CREATE_JOB_POSTING_PROPERTY);
         }
 
         // address: text
@@ -246,21 +231,18 @@ public class WeaviateImp {
         addrInner.put("skip", false);
         addrInner.put(VECTORIZE_PROPERTY_NAME, false);
         addrModuleConfig.put(TEXT2VEC_MODULE, addrInner);
-
         Property addrProp = Property.builder()
                 .name("address")
                 .dataType(Collections.singletonList("text"))
                 .description("The address of the job posting")
                 .moduleConfig(addrModuleConfig)
                 .build();
-
         Result<Boolean> r5 = weaviateClient.schema().propertyCreator()
                 .withClassName(collectionName)
                 .withProperty(addrProp)
                 .run();
-
         if (r5.hasErrors()) {
-            throw new AppException(ErrorCode.CANNOT_CREATE_ROADMAP_PROPERTY);
+            throw new AppException(ErrorCode.CANNOT_CREATE_JOB_POSTING_PROPERTY);
         }
     }
 
